--- a/i3blocks.conf
+++ b/i3blocks.conf
@@ -10,11 +10,31 @@
 separator=true
 separator_block_width=25
 
-[weather]
-command=curl -Ss 'https://wttr.in?0&T&Q' | cut -c 16- | head -3 | xargs echo
-interval=3600
-color=#A4C2F4
+[brightness]
+command=echo "dim: $(brightnessctl get | awk '{print $0 / 24000 * 100}')"
+signal=11
+interval=once
+color=#c0caf5
 
-[time]
-command=date '+%Y-%m-%d %H:%M:%S'
+[volume]
+# command=echo "vol: $(pactl get-sink-volume @DEFAULT_SINK@ | awk '{printf "%s", substr($5, 1, length($5) - 1)}')"
+command=echo "vol: $(wpctl get-volume 50 | awk '{print $2*100}')"
+signal=10
+interval=once
+color=#c0caf5
+
+# [battery]
+# command=echo "bat: $(sudo cat /sys/class/power_supply/BAT0/capacity)%"
+# interval=30
+# color=#c0caf5
+
+[weather]
+command=curl -Ss 'https://wttr.in?0&T&Q' | cut -c 16- | head -2 | xargs echo
+interval=1800
+color=#c0caf5
+
+[date]
+command=date '+%a, %b %d - %H:%M:%S '
 interval=1
+# color=#c0caf5
+color=#c0caf5
