--- a/sakura.conf
+++ b/sakura.conf
@@ -1,6 +1,6 @@
 [sakura]
 colorset1_fore=#e5c2be
-colorset1_back=rgba(9,45,95,1)
+colorset1_back=#0f2443
 colorset1_curs=rgb(255,255,255)
 colorset1_scheme=0
 colorset1_key=F1
