--- a/sakura.conf
+++ b/sakura.conf
@@ -1,6 +1,6 @@
 [sakura]
-colorset1_fore=#e5c2be
-colorset1_back=#0f2443
+colorset1_fore=rgb(229,194,190)
+colorset1_back=rgb(15,36,67)
 colorset1_curs=rgb(255,255,255)
 colorset1_scheme=0
 colorset1_key=F1
