add transparency to conky

--- a/picom.conf
+++ b/picom.conf
@@ -19,4 +19,6 @@ active-opacity = 1;
 opacity-rule = [
   "80:class_g = 'Sakura' && focused",
   "60:class_g = 'Sakura' && !focused",
+  "80:class_g = 'Conky' && focused",
+  "60:class_g = 'Conky' && !focused"
 ];
