--- a/i3blocks.conf
+++ b/i3blocks.conf
@@ -17,8 +17,9 @@ interval=once
 color=#c0caf5
 
 [volume]
-# command=echo "vol: $(pactl get-sink-volume @DEFAULT_SINK@ | awk '{printf "%s", substr($5, 1, length($5) - 1)}')"
-command=echo "vol: $(wpctl get-volume 50 | awk '{print $2*100}')"
+command=i3blocks_volume
+# echo "vol: $(pactl get-sink-volume @DEFAULT_SINK@ | awk '{printf "%s", substr($5, 1, length($5) - 1)}')"
+# command=echo "vol: $(wpctl get-volume 50 | awk '{print $2*100}')"
 signal=10
 interval=once
 color=#c0caf5
