--- a/conky.conf
+++ b/conky.conf
@@ -57,7 +57,8 @@ conky.config = {
 
 -- Variables: https://conky.cc/variables
 conky.text = [[
-${color grey}$color ${scroll 40 :)                            computers are awesome!                               aw yeah}
+${color grey}$color ${scroll 40 sup /wg/}
+# ${color grey}$color ${scroll 40 :)                            computers are awesome!                               aw yeah}
 $hr
 ${color grey}Uptime:$color $uptime
 # ${color grey}Frequency (in MHz):$color $freq
