played with picom, added blur, border-radius, and global inactive opacity. added icons to i3bar and roughly centered date/time. looks much nicer

--- a/picom.conf
+++ b/picom.conf
@@ -1,19 +1,19 @@
 backend = "xrender"
 
 # Disable background blur; search picom.conf for Background-Blurring for details
-blur-background = false;
+blur-background = true;
 
 # Disable background blur; search picom.conf for Shadows for details
-shadow = false
+shadow = true;
 
 # Disable window fading; search picom.conf for Fading for details
-fading = false
+fading = false;
 
 # Disable rounded window corners; search picom.conf for Corners for details
-corner-radius = 0
+corner-radius = 15; 
 
 # Defaults
-inactive-opacity = 1;
+inactive-opacity = 0.75;
 active-opacity = 1;
 
 opacity-rule = [
