--- a/i3blocks.conf
+++ b/i3blocks.conf
@@ -7,11 +7,26 @@
 
 
 # Global properties
-separator=true
-separator_block_width=25
+separator=false
+separator_block_width=40
+
+[date]
+command=date '+%a, %b %d - %H:%M:%S '
+interval=1
+# color=#c0caf5
+color=#c0caf5
+
+[padding]
+command=echo '                                       '
+interval=once
+
+[weather]
+command=curl -Ss 'https://wttr.in?0&T&Q' | cut -c 16- | head -2 | xargs echo
+interval=1800
+color=#c0caf5
 
 [brightness]
-command=echo "dim: $(brightnessctl get | awk '{print $0 / 24000 * 100}')"
+command=echo " $(brightnessctl get | awk '{print $0 / 24000 * 100}')"
 signal=11
 interval=once
 color=#c0caf5
@@ -29,13 +44,3 @@ color=#c0caf5
 # interval=30
 # color=#c0caf5
 
-[weather]
-command=curl -Ss 'https://wttr.in?0&T&Q' | cut -c 16- | head -2 | xargs echo
-interval=1800
-color=#c0caf5
-
-[date]
-command=date '+%a, %b %d - %H:%M:%S '
-interval=1
-# color=#c0caf5
-color=#c0caf5
