added blurr and fixed center aligned datetime

--- a/picom.conf
+++ b/picom.conf
@@ -1,24 +1,34 @@
+# EXAMPLE CONFIG AT : /etc/xdg/picom.conf
 backend = "xrender"
 
-# Disable background blur; search picom.conf for Background-Blurring for details
-blur-background = true;
 
-# Disable background blur; search picom.conf for Shadows for details
+# BLURRRRR
+blur:
+{
+  method = "box";
+  size = 10;
+  strength = 7;
+  background = false;
+  background-fixed = true;
+};
+
 shadow = true;
 
-# Disable window fading; search picom.conf for Fading for details
 fading = false;
 
-# Disable rounded window corners; search picom.conf for Corners for details
-corner-radius = 15; 
+# ROUNDER EDGES
+corner-radius = 15;
+rounded-corners-exclude = [
+  "class_g = 'i3bar'"
+  ];
 
-# Defaults
+# OPACITYYY
 inactive-opacity = 0.75;
 active-opacity = 1;
-
 opacity-rule = [
-  "80:class_g = 'Sakura' && focused",
+  "85:class_g = 'Sakura' && focused",
   "60:class_g = 'Sakura' && !focused",
   "80:class_g = 'Conky' && focused",
-  "60:class_g = 'Conky' && !focused"
-];
+  "60:class_g = 'Conky' && !focused",
+  "90:class_g = 'WebCord'"
+  ];
