wal update! rofi + conky configs are now in /wal/

--- a/i3blocks.conf
+++ b/i3blocks.conf
@@ -7,29 +7,19 @@
 
 
 # Global properties
-separator=false
-separator_block_width=40
-
-[date]
-command=date '+%a, %b %d - %H:%M:%S '
-interval=1
-# color=#c0caf5
-color=#c0caf5
-
-[padding]
-command=echo '                                   '
-interval=once
+separator=true
+separator_block_width=30
 
 [weather]
 command=curl -Ss 'https://wttr.in?0&T&Q' | cut -c 16- | head -2 | xargs echo
 interval=1800
-color=#c0caf5
+# color=#c0caf5
 
 [brightness]
 command=echo " $(brightnessctl get | awk '{print $0 / 24000 * 100}')"
 signal=11
 interval=once
-color=#c0caf5
+# color=#c0caf5
 
 [volume]
 command=i3blocks_volume
@@ -37,7 +27,18 @@ command=i3blocks_volume
 # command=echo "vol: $(wpctl get-volume 50 | awk '{print $2*100}')"
 signal=10
 interval=once
-color=#c0caf5
+# color=#c0caf5
+
+[date]
+command=date '+%a, %b %d'
+interval=once
+# color=#c0caf5
+# color=#c0caf5
+
+[time]
+command=date '+%H:%M:%S'
+interval=1
+# color=#c0caf5
 
 # [battery]
 # command=echo "bat: $(sudo cat /sys/class/power_supply/BAT0/capacity)%"
