--- a/picom.conf
+++ b/picom.conf
@@ -13,14 +13,18 @@ blur:
 };
 
 shadow = true;
-
-fading = false;
+shadow-exclude = [
+  "class_g = 'Rofi'"
+]
+fading = true;
+fade-delta = 5;
 
 # ROUNDER EDGES
-corner-radius = 15;
-rounded-corners-exclude = [
-  "class_g = 'i3bar'"
-  ];
+# corner-radius = 15;
+# rounded-corners-exclude = [
+#  "class_g = 'i3bar'",
+#  "class_g = 'i3-nagbar'"
+# ];
 
 # OPACITYYY
 inactive-opacity = 0.75;
@@ -30,5 +34,6 @@ opacity-rule = [
   "60:class_g = 'Sakura' && !focused",
   "80:class_g = 'Conky' && focused",
   "60:class_g = 'Conky' && !focused",
-  "90:class_g = 'WebCord'"
+  "90:class_g = 'Vesktop'",
+  "100:class_g = 'Rofi'"
   ];
