--- a/picom.conf
+++ b/picom.conf
@@ -12,10 +12,7 @@ blur:
   background-fixed = true;
 };
 
-shadow = true;
-shadow-exclude = [
-  "class_g = 'Rofi'"
-]
+shadow = false;
 fading = true;
 fade-delta = 5;
 
@@ -27,13 +24,13 @@ fade-delta = 5;
 # ];
 
 # OPACITYYY
-inactive-opacity = 0.75;
+inactive-opacity = 0.8;
 active-opacity = 1;
 opacity-rule = [
-  "85:class_g = 'Sakura' && focused",
   "60:class_g = 'Sakura' && !focused",
   "80:class_g = 'Conky' && focused",
   "60:class_g = 'Conky' && !focused",
   "90:class_g = 'Vesktop'",
+  "90:class_g = 'librewolf' && !focused",
   "100:class_g = 'Rofi'"
   ];
